[package]
name = "qobject-compiler"
version = "0.1.0"
authors = ["R1tschY <r1tschy@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "^1.0.50"
pkg-config = "^0.3.17"
lazy_static = "1.4.0"
qt5qml = { path = "../qt5qml" }
regex = "1"

[dev-dependencies]
tempfile = "3.1.0"
indoc = "^0.3.4"
