[package]
name = "qobject-macros"
version = "0.1.0"
authors = ["R1tschY <r1tschy@posteo.de>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "*"

[dev-dependencies]
qobject-compiler = { path = "../compiler" }
assert_matches = "1.3"